tests/errors/compiler/wait_ident_after_semicomma_in_struct/no_ident_after_int.c
void main()
{
    struct point
	{
	int ; 
	};
}
